# OOP

clion/shapes/: CMakeLists.txt
clion/shapes/cmake/: AddCatch2.cmake
clion/shapes/src/: CMakeLists.txt  IShape.cpp  IShape.h
clion/shapes/test/: CMakeLists.txt  shapes-tests.cpp
lab_1/task_1/: task_1.sln
lab_1/task_2/: task_2.sln
lab_1/task_3/: task_3.sln
lab_2/task_1/: task_1.sln
lab_2/task_2/: task_2.sln
lab_2/task_3/: task_3.sln
oop/: oop.sln
oop/Calculator/: Calculator.cpp  Calculator.h  Calculator.vcxproj  Calculator.vcxproj.filters  CalculatorCommandHandler.cpp  CalculatorCommandHandler.h  Function.cpp  Function.h  Observable.h  Variable.cpp  Variable.h  main.cpp
oop/Calculator-tests/: Calculator-tests.cpp  Calculator-tests.vcxproj  Calculator-tests.vcxproj.filters
oop/car/: car.cpp  car.vcxproj  car.vcxproj.filters
oop/carDriving/: Car.cpp  Car.h  CarCommandHandler.cpp  CarCommandHandler.h  CarDriving.cpp  carDriving.vcxproj  carDriving.vcxproj.filters
oop/carDriving-tests/: CarDriving-tests.cpp  carDriving-tests.vcxproj  carDriving-tests.vcxproj.filters
oop/date/: CDate.cpp  CDate.h  date.vcxproj  main.cpp
oop/date-tests/: date-tests.cpp  date-tests.vcxproj  date-tests.vcxproj.filters
oop/primeNumbers/: GeneratePrimeNumbers.cpp  GeneratePrimeNumbers.h  PrimeNumbers.cpp  primeNumbers.vcxproj  primeNumbers.vcxproj.filters
oop/primeNumbers-tests/: PrimeNumbers-tests.cpp  primeNumbers-tests.vcxproj  primeNumbers-tests.vcxproj.filters
oop/replace-tests/: Replace-tests.cpp  replace-tests.vcxproj  replace-tests.vcxproj.filters
(+70 files in other folders)
